# praaline-core

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md  appveyor.yml  pncore.pro  pncore.pro.user.4.10-pre1  praaline-core.pro
annotation/: AnnotationTier.cpp  (+25 more)
src/: CMakeLists.txt  inst.txt
src/Annotation/: AnnotationDataTable.cpp  AnnotationElement.cpp  AnnotationTier.cpp  AnnotationTierGroup.cpp  Interval.cpp  IntervalTier.cpp  Point.cpp  PointTier.cpp  Relation.cpp  RelationTier.cpp  Sequence.cpp  SequenceTier.cpp  Transcription.cpp  TreeTier.cpp
src/Base/: DataType.cpp  IDatastore.cpp  ISaveable.cpp  RealTime.cpp  RealValueList.cpp
src/Corpus/: Corpus.cpp  CorpusAnnotation.cpp  CorpusBookmark.cpp  CorpusCommunication.cpp  CorpusCommunicationSpeakerRelation.cpp  CorpusObject.cpp  CorpusObjectInfo.cpp  CorpusParticipation.cpp  CorpusRecording.cpp  CorpusSpeaker.cpp  CorpusSpeakerRelation.cpp
src/Dataframe/: DataFrame.cpp
src/Datastore/: AnnotationDatastore.cpp  CorpusDatastore.cpp  CorpusRepository.cpp  CorpusRepositoryDefinition.cpp  DatastoreFactory.cpp  FileDatastore.cpp  MetadataDatastore.cpp  NameValueListDatastore.cpp  SQLAnnotationDatastore.cpp  SQLAnnotationDatastore.h  SQLMetadataDatastore.cpp  SQLMetadataDatastore.h  XMLAnnotationDatastore.cpp  XMLAnnotationDatastore.h  XMLMetadataDatastore.cpp  XMLMetadataDatastore.h
src/Diff/: DiffIntervals.cpp  DiffPoints.cpp
src/Interfaces/: ImportAnnotations.cpp  InterfaceTextFile.cpp
src/Interfaces/Anvil/: AnvilMetadataTranscript.cpp
src/Interfaces/CONLL/: CONLLXDocument.cpp
src/Interfaces/CSV/: CSVFileAnnotation.cpp
src/Interfaces/ELAN/: ELANAnnotation.cpp
src/Interfaces/Exmaralda/: ExmaraldaBasicTranscription.cpp  ExmaraldaTranscriptionBridge.cpp
src/Interfaces/Phon/: PhonTranscription.cpp
src/Interfaces/Praat/: AnnotationInterfacePraat.cpp  PraatPitchFile.cpp  PraatPointTierFile.cpp  PraatTextFile.cpp  PraatTextGrid.cpp
src/Interfaces/Subtitles/: SubtitlesFile.cpp
src/Interfaces/TEI/: TEIHeader.cpp
src/Interfaces/Transcriber/: TranscriberAnnotationGraph.cpp
src/Language/: PhonemeDefinitions.cpp  PhoneticAlphabet.cpp  Tokeniser.cpp
src/Query/: Dataset.cpp  DatasetDefinition.cpp  QueryDefinition.cpp  QueryFilterGroup.cpp  QueryFilterSequence.cpp  QueryOccurrence.cpp
src/Serialisers/Base/: SerialiserAnnotation.cpp  SerialiserAnnotationStructure.cpp  SerialiserMetadata.cpp  SerialiserMetadataStructure.cpp  SerialiserNameValueList.cpp
src/Serialisers/JSON/: JSONSerialiserAnnotation.cpp  JSONSerialiserAnnotationStructure.cpp  JSONSerialiserBase.cpp  JSONSerialiserCorpusBookmark.cpp  JSONSerialiserDatasetDefinition.cpp  JSONSerialiserMetadata.cpp  JSONSerialiserMetadataStructure.cpp  JSONSerialiserNameValueList.cpp  JSONSerialiserQueryDefinition.cpp
src/Serialisers/SQL/: SQLQueryEngineAnnotation.cpp  SQLQueryEngineAnnotation.h  SQLSchemaProxyBase.cpp  SQLSchemaProxyBase.h  SQLSerialiserAnnotation.cpp  SQLSerialiserAnnotation.h  SQLSerialiserAnnotationStructure.cpp  SQLSerialiserAnnotationStructure.h  SQLSerialiserBase.cpp  SQLSerialiserBase.h  SQLSerialiserMetadata.cpp  SQLSerialiserMetadata.h  SQLSerialiserMetadataStructure.cpp  SQLSerialiserMetadataStructure.h  SQLSerialiserNameValueList.cpp  SQLSerialiserNameValueList.h  SQLSerialiserSpeakerRelation.cpp  SQLSerialiserSpeakerRelation.h  SQLSerialiserSystem.cpp  SQLSerialiserSystem.h
src/Serialisers/XML/: XMLSerialiserAnnotation.cpp  XMLSerialiserAnnotationStructure.cpp  XMLSerialiserBase.cpp  XMLSerialiserCorpusBookmark.cpp  XMLSerialiserMetadata.cpp  XMLSerialiserMetadataStructure.cpp  XMLSerialiserNameValueList.cpp
src/Statistics/: HistogramCalculator.cpp  Measures.cpp  SpeakerTimeline.cpp  StatisticalMeasureDefinition.cpp  StatisticalSummary.cpp  WordAlign.cpp
src/Structure/: AnnotationStructure.cpp  AnnotationStructureAttribute.cpp  AnnotationStructureLevel.cpp  MetadataStructure.cpp  MetadataStructureAttribute.cpp  MetadataStructureSection.cpp  NameValueList.cpp  StructureAttributeBase.cpp
src/annotation/: AnnotationDataTable.cpp  AnnotationElement.cpp  AnnotationTier.cpp  AnnotationTierGroup.cpp  Interval.cpp  IntervalTier.cpp  Point.cpp  PointTier.cpp  Relation.cpp  RelationTier.cpp  Sequence.cpp  SequenceTier.cpp  Transcription.cpp  TreeTier.cpp
src/base/: DataType.cpp  IDatastore.cpp  IDatastore.h  ISaveable.cpp  RealTime.cpp  RealValueList.cpp
src/corpus/: Corpus.cpp  CorpusAnnotation.cpp  CorpusBookmark.cpp  CorpusCommunication.cpp  CorpusObject.cpp  CorpusObjectInfo.cpp  CorpusParticipation.cpp  CorpusRecording.cpp  CorpusSpeaker.cpp
src/dataframe/: DataFrame.cpp
src/datastore/: AnnotationDatastore.cpp  CorpusDatastore.cpp  CorpusRepository.cpp  CorpusRepositoryDefinition.cpp  DatastoreFactory.cpp  FileDatastore.cpp  MetadataDatastore.cpp  NameValueListDatastore.cpp  SQLAnnotationDatastore.cpp  SQLAnnotationDatastore.h  SQLMetadataDatastore.cpp  SQLMetadataDatastore.h  XMLAnnotationDatastore.cpp  XMLAnnotationDatastore.h  XMLMetadataDatastore.cpp  XMLMetadataDatastore.h
src/diff/: DiffIntervals.cpp  DiffPoints.cpp
src/interfaces/: ImportAnnotations.cpp  InterfaceTextFile.cpp
src/interfaces/anvil/: AnvilMetadataTranscript.cpp
src/interfaces/conll/: CoNLLXDocument.cpp
src/interfaces/csv/: CSVFileAnnotation.cpp
src/interfaces/elan/: ELANAnnotation.cpp
src/interfaces/exmaralda/: ExmaraldaBasicTranscription.cpp  ExmaraldaTranscriptionBridge.cpp
src/interfaces/phon/: PhonTranscription.cpp
src/language/: PhonemeDefinitions.cpp  PhoneticAlphabet.cpp  Tokeniser.cpp
src/query/: Dataset.cpp  DatasetDefinition.cpp  QueryDefinition.cpp  QueryFilterGroup.cpp  QueryFilterSequence.cpp  QueryOccurrence.cpp
src/statistics/: HistogramCalculator.cpp  Measures.cpp  SpeakerTimeline.cpp  StatisticalMeasureDefinition.cpp  StatisticalSummary.cpp  WordAlign.cpp
src/structure/: AnnotationStructure.cpp  AnnotationStructureAttribute.cpp  AnnotationStructureLevel.cpp  MetadataStructure.cpp  MetadataStructureAttribute.cpp  MetadataStructureSection.cpp  NameValueList.cpp  StructureAttributeBase.cpp
test/: CMakeLists.txt
(+2977 files in other folders)
